fix carrousel on mobile and descktop, JS and CSS

--- a/style.css
+++ b/style.css
@@ -155,27 +155,20 @@ header {
     max-width: 100%;
 }
 
-
-
-
-
-
-.carousel {
+/* .carousel {
     display: flex;
-    overflow-x: hidden; /* Hide overflow for non-touch devices */
-    scroll-snap-type: x mandatory;
-    -webkit-overflow-scrolling: touch; /* for smooth scrolling on iOS */
-  }
+    flex-wrap: wrap;
+} */
 
   .card {
     flex: 0 0 auto;
-    width: calc( 25% - 45px );
-    margin-left: 20px;
+    /* width: calc( 25% - 45px ); */
     padding: 15px;
     background-color: #f0f0f0;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     scroll-snap-align: start;
+    margin: 20px 0;
   }
 
   .card img {
@@ -191,7 +184,7 @@ header {
 }
 
   .controls {
-    margin-top: 20px;
+    display: none;
   }
 
   .prev,
@@ -222,7 +215,22 @@ header {
     background-color: black;
   }
 
-
+@media screen and (min-width: 600px) {
+    .carousel {
+        display: flex;
+        flex-wrap: wrap;
+    } 
+    .card {
+        width: calc( 50% - 40px );
+        margin: 10px 0;
+    }
+    .card:nth-child(odd){
+        margin-right: 10px;
+    }
+    .card:nth-child(even){
+        margin-left: 10px;
+    }
+}
 
 @media screen and (min-width: 768px) {
     .menu {
@@ -232,6 +240,11 @@ header {
         height: 75vh;
     }
     .hero-text { height: calc(75vh - 6rem);}
+        
+    .controls {
+        display: block;
+    }
+    
 }
 
 @media screen and (min-width: 1024px) {
@@ -254,6 +267,14 @@ header {
     .menu a.underlined { text-decoration: underline;}
     .menu .btn, .menu a:last-child {margin: 0;}
 
+    .carousel {
+        overflow-x: hidden; /* Hide overflow for non-touch devices */
+        scroll-snap-type: x mandatory;
+        -webkit-overflow-scrolling: touch; /* for smooth scrolling on iOS */
+    }
+    .controls {
+        display: block;
+      }
 }
 
 @media screen and (min-width: 1280px) {
@@ -261,5 +282,13 @@ header {
         height: 30rem;
     }
     .hero-text { height: 24rem;}
-
+    .card {
+        width: calc( 25% - 45px );
+        margin-bottom: 0px;
+        min-height: 22rem;
+        margin-right: 20px;
+    }
+    .card:last-child {
+        margin-right: 0;
+    }
 }
